--- a/.env
+++ b/.env
@@ -1,19 +1,12 @@
-# In all environments, the following files are loaded if they exist,
-# the latter taking precedence over the former:
-#
-#  * .env                contains default values for the environment variables needed by the app
-#  * .env.local          uncommitted file with local overrides
-#  * .env.$APP_ENV       committed environment-specific defaults
-#  * .env.$APP_ENV.local uncommitted environment-specific overrides
-#
-# Real environment variables win over .env files.
-#
-# DO NOT DEFINE PRODUCTION SECRETS IN THIS FILE NOR IN ANY OTHER COMMITTED FILES.
-#
-# Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
-# https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
-
-###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=f6f31e49a4153778cbd11e1395f85216
-###< symfony/framework-bundle ###
+
+IP_LOCATION_API_URL=http://api.ipstack.com
+IP_LOCATION_SECRET_KEY=
+
+WEATHER_FORECAST_API_URL=https://api.openweathermap.org
+WEATHER_FORECAST_SECRET_KEY=
+
+USER_IP_API_URL=https://ipecho.net
+
+DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
