remove app secret

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_ENV=dev
-APP_SECRET=f6f31e49a4153778cbd11e1395f85216
+APP_SECRET=
 
 IP_LOCATION_API_URL=http://api.ipstack.com
 IP_LOCATION_SECRET_KEY=
